projects/nanousd-labs/nanousd/tests/usda/invalid/primitem_no_terminator_nested_prim.usda
#usda 1.0

# Spec §16.2.17 PrimItem production requires each nested PrimSpec to be
# followed by a Crlf (newline) — semicolon is not accepted for prim
# items. This file has the inner `def` closing `}` abutting the outer
# closing `}` on one logical expression, with no separating newline.
# Must be rejected.

def "Outer" { def "Inner" {} }
